Revert "Fix: staff spacing"
This reverts commit 7a3a57666a42fae5c4d5531b559f85d391bfd42b.

--- a/style.css
+++ b/style.css
@@ -312,7 +312,7 @@ button:active,
   flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
-  padding: 4rem 7rem;
+  padding: 4rem 5rem;
 }
 
 .section-4 h2 {
@@ -328,7 +328,7 @@ button:active,
   flex-direction: column;
   padding: 0 10rem;
 
-  width:100%
+  width:90%
 }
 
 .staff-member {
@@ -667,10 +667,6 @@ footer {
 
   .section-3 h3 {
     font-size: 12vh; /* Adjust font size */
-  }
-
-  .staff {
-    width: 160%;
   }
 
   .see-more {
